--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
-  <title>React.js Boilerplate</title>
+  <title>Sandrinha's Palace</title>
 </head>
 
 <body>
